deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wox-koloritmarketplace
  labels:
    app: wox-koloritmarketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wox-koloritmarketplace
  template:
    metadata:
      labels:
        app: wox-koloritmarketplace
    spec:
      containers:
        - name: wox-koloritmarketplace
          image: koloritmarketplace:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 400Mi
              cpu: 250m
            limits:
              memory: 800Mi
              cpu: 1000m
#          readinessProbe:
#            initialDelaySeconds: 240
#            httpGet:
#              path: /actuator/health
#              port: 8080
#          livenessProbe:
#            initialDelaySeconds: 240
#            periodSeconds: 3
#            httpGet:
#              path: /actuator/health
#              port: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
