service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koloritmarketplace-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app:  wox-koloritmarketplace
  ports:
    - port: 80
      targetPort: 8080 # порт в нутри
      protocol: TCP
      nodePort: 32002
